--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "dev": "nodemon src/server.js --ignore __tests_",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +18,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "factory-girl": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.2"
+    "pg": "^8.5.1",
+    "sequelize": "^6.4.0",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.1",
+    "supertest": "^6.1.1"
   }
 }
