--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "sequelize db:migrate",
     "start": "nodemon src/server.js",
     "dev": "nodemon src/server.js --ignore __tests_",
     "pretest": "NODE_ENV=test sequelize db:migrate",
